# nuked

./: .dockerignore  AGENTS.md  Cargo.toml  Dockerfile  README.md  nixpacks.toml  x1.csv
src/: analysis.rs  main.rs
static/: index.html
