[package]
name = "nuked"
version = "0.1.0"
edition = "2024"
rust-version = "1.91.1"

[dependencies]
anyhow = "1"
axum = { version = "0.7", features = ["multipart"] }
chrono = "0.4"
csv = "1"
litchi = { version = "0.0.1", features = ["iwa", "prost-build"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
